--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 PORT=7055
-MONGO_URI=mongodb+srv://radhakishanjangid404:OELzpUY9tK6ivTyx@faminder.ckzun9m.mongodb.net/faminder?retryWrites=true&w=majority
+MONGO_URI=
 JWT_SECRET=faminder@CODE
